Fixed placement of mobile menu on iPhone-sized widths (for real this time)

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ h1 {
 .header-flex {
     display: flex;
     height: 100%;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     padding: 0 45px 0 20px;
@@ -54,6 +55,7 @@ h1 {
 
 .menubar {
     padding: 20px;
+    margin-right: 50px;
     font-size: 1.25em;
 }
 
@@ -194,8 +196,8 @@ h1 {
 
     .header-flex {
         align-items: flex-start;
-        width: 70%;
-        padding: 0 20px 0 20px;
+        width: 100%;
+        padding: 0 50px 20px 20px;
     }
 
     #title {
@@ -262,9 +264,19 @@ h1 {
     }
 
     #mobilemenu {
-        position: fixed;
-        top: 30px;
-        right: 0px;
+        margin-top: 30px;
+        margin-right: 30px;
+        width: 200px;
+    }
+
+    .iphone-menu {
+        position: absolute;
+        width: 100vw;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        display: flex;
+        justify-content: flex-end;
     }
 
     .footer-grid {
